# I2T-library

./: .gitignore  pyproject.toml
semt_py/: auth_manager.py  dataset_manager.py  extension_manager.py  modification_manager.py  reconciliation_manager.py  table_manager.py  utils.py
site/api/: index.html
tests/: conftest.py  test_extenders.py  test_integration.py  test_modifiers.py  test_reconcilers.py
